--- a/MID/assignment_1_KNN.ipynb
+++ b/MID/assignment_1_KNN.ipynb
@@ -706,6 +706,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here L1 distance or Manhattan Distance performed better than L2 distance or Euclidean Distance. L1 distance is more robust to outliers iin the data compared to L2 distance. Also, calculating L1 distance computationally more efficient than L2 distance, becaue it takes the absolute differeneces rather than squarring and thaking square roots. L1 distance also can be used to identify features in the data, by weighting the features according to their L1 distance, KNN can focus on the deatures that are most predective."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
